fixed responsive design for bigger screens (removed white space on wide screen view)

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
 #root {
-  max-width: 1280px;
-  margin: 0;
+  max-width: 100%;
+  margin: 0 auto;
   padding: 0;
   text-align: center;
+  overflow-x: hidden;
+}
+
+body {
+  margin: 0;
+  min-width: 320px;
+  min-height: 100vh;
+  background-color: white;
+  color: #213547;
 }
 
 .logo {
