--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ body {
   min-height: 100vh;
   background-color: white;
   color: #213547;
+  overflow-x: hidden;
 }
 
 h1 {
